Fix issue with NPE list construction; 6.0.4 -> 6.0.5